# patinac

./: .gitignore  Cargo.toml  README.md  TODO.md  VGI.md  foo.txt  game.md  honse.py  materials.md  menger.vox  old_shader.wgsl  patinac.code-workspace  patinac_log.txt  room.vox  rustfmt.toml  tasks.md  tree.txt  voxel2
.cargo/: config,toml  config.toml
crates/egui_wgpu_backend19/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: entity.rs  game.rs  lib.rs  renderpasses.rs  test_scene.rs
crates/game/src/recordables/: lit_textured.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: cpu_tracked_buffer.rs  cpu_tracked_dense_set.rs  input_manager.rs  lib.rs  linalg.rs  recordables.rs  render_cache.rs  renderable.rs  renderer.rs  screen_sized_texture.rs  voxel_buffer_deduplicator.wgsl  voxel_color_transfer.wgsl  voxel_image_discoverer.wgsl  voxel_post_processing.rs  window.rs
crates/gfx/src/recordables/: flat_textured.rs  lit_textured.rs
crates/gfx/src/renderable/: chunked_parallax_raymarched.rs  flat_textured.rs  lit_textured.rs  parallax_raymarched.rs
crates/gfx/src/renderable/res/chunked_parallax_raymarched/: shader.wgsl
crates/gfx/src/renderable/res/flat_textured/: flat_textured.wgsl
crates/gfx/src/renderable/res/lit_textured/: lit_textured.wgsl
crates/gfx/src/renderable/res/parallax_raymarched/: old_shader.wgsl  shader.wgsl  shader2.wgsl
crates/gui/: Cargo.toml
crates/gui/src/: crosshair.rs  crosshair.wgsl  debug_menu.rs  lib.rs
crates/sebs_noise/: Cargo.toml
crates/sebs_noise/src/: lib.rs  signet.rs
crates/util/: Cargo.toml
crates/util/src/: allocator.rs  async.rs  atomics.rs  broadcast_event.rs  crash_handler.rs  dense_set.rs  global_allocator.rs  lib.rs  log.rs  pinger.rs  registrar.rs  timer.rs  uuid.rs  window.rs
crates/verdigris/: Cargo.toml
crates/verdigris/src/: brick_map_chunk.rs  brick_map_chunk.wgsl  demo_scene.rs  face_voxel_chunk.rs  face_voxel_chunk.wgsl  instanced_indirect.rs  instanced_indirect.wgsl  lib.rs  player.rs  raster.rs  raster.wgsl  raster_chunk.rs  recordables.rs  test_scene.rs  voxel_world.rs
crates/verdigris/src/recordables/: flat_textured.rs  lit_textured.rs  skybox.rs
crates/verdigris/src/recordables/res/lit_textured/: lit_textured.wgsl
crates/verdigris/src/recordables/res/skybox/: skybox.wgsl
crates/voxel/: Cargo.toml
crates/voxel/src/: brick_map.rs  brick_map_chunk.rs  brick_map_chunk.wgsl  chunk.rs  chunk_data_manager.rs  chunk_manager.rs  chunk_pool.rs  chunk_pool_renderer.wgsl  color_calculator.wgsl  color_caluclator.rs  common.wgsl  face_manager.rs  gpu_data.rs  lib.rs  material.rs  raster.wgsl  raster_chunk.rs  sphere_chunk.wgsl  suballocated_buffer.rs  visibility_marker.rs  visibility_marker.wgsl  voxel.rs  voxel_chunk.rs  voxel_chunk.wgsl  voxel_chunk_data_manager.rs  voxel_chunk_manager.rs  voxel_color_transfer.rs  voxel_color_transfer.wgsl  voxel_data_manager.rs  voxel_image_deduplicator.rs  voxel_image_deduplicator.wgsl  voxel_image_discoverer.rs  voxel_image_discoverer.wgsl  voxel_image_workgroup_deduplicator.wgsl  voxel_post_processing.rs  voxel_shader.wgsl  voxel_world.rs
crates/voxel/src/data/: brick_map.rs  chunk_info.rs  chunk_metadata.rs  cpu_chunk_data.rs  face.rs  face_id.rs  material.rs  material_brick.rs  mod.rs  point_light.rs  rendered_face_info.rs  voxel_face_direction.rs
crates/voxel/src/gpu_data/: brick_map.rs  chunk_meta_data.rs  material_brick.rs  visibility_brick.rs
crates/voxel/src/passes/: color_detector.rs  color_detector.wgsl  color_raytracer.rs  color_raytracer.wgsl  color_transferer.rs  color_transferer.wgsl  compute_reset.rs  compute_reset.wgsl  mod.rs
crates/voxel2/: Cargo.toml
crates/voxel2/src/: chunk_manager.rs  chunk_manager_indirect.wgsl  gpu_data.rs  lib.rs  suballocated_buffer.rs  visibility_marker.rs  visibility_marker.wgsl  visibility_unmarker.rs  visibility_unmarker.wgsl  voxel_chunk.rs  voxel_chunk.wgsl  voxel_chunk_data_manager.rs  voxel_chunk_manager.rs  voxel_color_transfer.wgsl  world_manager.rs
crates/voxel2/src/cpu/: mod.rs
crates/voxel2/src/data/: brick_map.rs  material.rs  mod.rs  voxel_face_direction.rs
crates/voxel2/src/gpu/: face.rs  mod.rs
crates/voxel3/: Cargo.toml
crates/voxel3/src/: chunk_manager.rs  cpu_tracked_dense_set.rs  face_manager.rs  lib.rs  voxel_manager.rs  voxel_manager.wgsl  voxel_world.rs
crates/voxel4/: Cargo.toml
crates/voxel4/src/: chunk_brick_manager.rs  face_manager.rs  lib.rs  material.rs  voxel_world.rs
crates/voxel4/src/gpu_data/: brick_map.rs  chunk_meta_data.rs  mod.rs
crates/world_gen/: Cargo.toml
crates/world_gen/src/: brick_map.rs  lib.rs  voxel.rs
gfx/: Cargo.toml
gfx/src/renderable/: flat_textured.rs  flat_textured.wgsl
models/: monu2.vox
src/: entity.rs  game.rs  gfx.rs  main.rs  test_scene.rs  util.rs
src/entity/: test_scene.rs
src/game/: game.rs
src/gfx/: linalg.rs  render_cache.rs  renderable.rs  renderer.rs  window.rs
src/gfx/renderable/: flat_textured.rs  lit_textured.rs  lit_textured.wgsl
src/gfx/shaders/: foo.wgsl
src/recordables/: flat_textured.rs  lit_textured.rs
src/util/: allocator.rs  log.rs  registrar.rs
util/src/: lib.rs  registrar.rs
