[package]
name = "patinac"
version = "0.0.0-0"
edition = "2021"

[workspace]
members = [
    "crates/util",
    "crates/gfx",
    "crates/game",
    "crates/verdigris",
    "crates/gui",
    "crates/voxel",
    "crates/voxel3", "crates/voxel4",
]

[dependencies]
util = { workspace = true }
gfx = { workspace = true }
game = { workspace = true }
verdigris = { workspace = true }
gui = { workspace = true }
log = { workspace = true }
oneshot = { workspace = true }
dashmap = { workspace = true }
voxel = { workspace = true }
rand = { workspace = true }
voxel3 = { workspace = true }
itertools = { workspace = true }

[workspace.dependencies]
util = { path = "crates/util" }
gfx = { path = "crates/gfx" }
game = { path = "crates/game" }
verdigris = { path = "crates/verdigris" }
gui = { path = "crates/gui" }
voxel = { path = "crates/voxel" }
voxel3 = { path = "crates/voxel3" }
log = { version = "0.4.20", features = ["std"] }
bytemuck = { version = "1.14.1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
tobj = "4.0.1"
itertools = "0.12.1"
spiral = "0.2.1"
noise = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
winit = "0.29.0"
wgpu = { version = "0.20.0" }
strum = { version = "0.26", features = ["derive"] }
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
nalgebra = "0.32.3"
pollster = "0.3.0"
chrono = "0.4.31"
getrandom = "0.2.12"
seahash = "4.1.0"
oneshot = "0.1.6"
crossbeam = "0.8.4"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "670140e2a1482a1ad3607dead44c40d8261ba582" }
dashmap = "5.5.3"
backtrace = "0.3.69"
sys-locale = "0.3.1"
num = "0.4.2"
dot_vox = "5.1.1"
num_enum = "0.7.2"
lockfree = "0.5.1"
smallvec = "1.13.2"

[profile.dev]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

[profile.release]
debug = true

[profile.deploy]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = true
codegen-units = 1
rpath = true
