[package]
name = "game"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = {path = "../gfx"}
util = {path = "../util"}
rayon = "1.8.1"
log = { version = "0.4.20", features = ["std"]}
wgpu = "0.19"
rand = "0.8.5"
bytemuck = { version = "1.14.1", features = [ "derive" ] }
