[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"]}
chrono = "0.4.31"
bytemuck = { version = "1.14.1", features = [ "derive" ] }
getrandom = "0.2.12"
fxhash = "0.2.1"
