[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
bytemuck = { workspace = true }
getrandom = { workspace = true }
seahash = { workspace = true }
oneshot = { workspace = true }
crossbeam = { workspace = true }
backtrace = { workspace = true }
dashmap = { workspace = true }
lockfree = { workspace = true }