[package]
name = "verdigris"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
game = { workspace = true }
util = { workspace = true }
gfx = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
voxel2 = { workspace = true }
dashmap = { workspace = true }
oneshot = { workspace = true }
