[package]
name = "world_gen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = [ "derive" ] }
phf = { version = "0.11.2", features = ["phf_macros"] } 
phf_shared = "0.11.2"
phf_macros = "0.11.2"
strum = {version = "0.26", features = ["derive"] }
