[package]
name = "world_gen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = [ "derive" ] }
strum = {version = "0.26", features = ["derive"] }
util = {path = "../util"}
gfx = {path = "../gfx"}
wgpu = "0.19"
log = { version = "0.4.20", features = ["std"]}